--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <tbody>
     <tr>
       <td> Dec.2023 - Now &nbsp; </td>    
-      <td> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 文生视频-双语视文CLIP</font> 
            <ul>
@@ -94,10 +94,9 @@
            </ul>    
       </td>
     </tr>
-
     <tr>
       <td> Aug.2023 - Dec.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;"> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 业务大模型(金融)-预训练、SFT的完整链路</font> 
            <ul>
@@ -109,7 +108,7 @@
     </tr>
     <tr>
       <td> Apr.2023 - Aug.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;"> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 通用大模型(混元助手)-强化学习：RM、PPO和DPO</font> 
            <ul>
@@ -121,29 +120,29 @@
     </tr>
     <tr>
       <td> Feb.2023 - Apr.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;"> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 业务大模型(广告)-营销话术的SFT和强化学习</font> 
            <ul>
            <li><font size="2" face="宋体">1. 实现基于医美、口腔、眼科、植发等重点行业信息的AIGC封闭式问答机器人；现阶段已经在消费医疗赛道-口腔打造正向案例，其中头部客户对比人工设置的问答，AI生成问答沉淀的线索有效率提升 44%（37.93%→54.55%），成本降低 21%（1110.0→918.4）；</font></li>
-           <li><font size="2" face="宋体">2. 基于客户喜好和转化需求，使用强化学习技术实现问答话术的个性化表达，兼具语言风格、交流能力、商品知识和营销导向等定制化的核心原子能力：拟人化程度高、态度亲切温和；理解商品相关行业属性知识图谱以及用户非专业表达的诉求；话术新鲜多样促进留存；</font></li>
+           <li><font size="2" face="宋体">2. 基于客户喜好和转化需求，使用强化学习技术实现问答话术的个性化表达，兼具语言风格、交流能力、商品知识和营销导向等定制化的核心原子能力：拟人化程度高、态度亲切温和；理解商品相关行业属性知识图谱以及用户非专业表达的诉求；话术新鲜多样促进留存。</font></li>
            </ul>
       </td>
     </tr>
     <tr>
       <td> Jan.2023 - Feb.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;"> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 文生图-SOTA的复现以及超越性能的改造</font> 
            <ul>
            <li><font size="2" face="宋体">1. 根据业务需求，完成闭源工作DiT的复现；改造latent空间为像素级别进行训练，使用更大的参数量的transformer结构代替U-Net；</font></li>
-           <li><font size="2" face="宋体">2. ImageNet 256x256数据集上实验结果超过当前SOTA（FID：2.22>2.27）。</font></li>
+           <li><font size="2" face="宋体">2. ImageNet 256x256数据集上实验结果超过当前SOTA(FID：2.22>2.27)。</font></li>
            </ul>
       </td>
     </tr> 
     <tr>
       <td > Oct.2022 - Feb.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;"> 
+      <td style="border-bottom:1px solid lightgray;"> 
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 人脸识别-工业应用的高难度case解决方案</font> 
            <ul>
@@ -156,7 +155,7 @@
     </tr>
     <tr>
       <td> Oct.2022 - Feb.2023 &nbsp; </td>   
-      <td style="border-top:1px solid lightgray;">
+      <td style="border-bottom:1px solid lightgray;">
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 隐私保护计算-大数据加密的高精度概率回归模型</font> 
            <ul>
