--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </td>
     </tr>
     <tr>
-      <td> Oct.2022 - Feb.2023 &nbsp; </td>   
+      <td> Aug.2022 - Oct.2022 &nbsp; </td>   
       <td style="border-bottom:1px solid lightgray;">
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 隐私保护计算-大数据加密的高精度概率回归模型</font> 
@@ -163,6 +163,18 @@
            <li><font size="2" face="宋体">开发联合概率密度与错误标签后验概率的高精度模型，针对隐私加密通信数据具有极高的检索/判断精度。对于1K/5K/1W数量的未知加密样本，模型平均精度从98+提升至99.9/99.7/99.6；</font></li>
            <li><font size="2" face="宋体">PSI抽样特征从27降至7个，在实现高精度加密通信的同时单次运行效率达万分之三秒左右；</font></li>
            <li><font size="2" face="宋体">参加iDASH 2022-Task 4，并在该赛道以99.39的超高精度超过蚂蚁集团(去年双赛道冠军，99.04)等所有竞争对手斩获模型精度第一，综合隐私通信效率后获得第二名。[<a href="./Awards/22iDASH.jpg" target="_blank">Prize</a>]</font></li>
+           </ul>
+      </td>
+    </tr>
+    <tr>
+      <td> Jun.2022 - Aug.2022 &nbsp; </td>   
+      <td style="border-bottom:1px solid lightgray;">
+           <br>
+           <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 广告特征工程-视文相关性和精排特征实验</font> 
+           <ul>
+           <li><font size="2" face="宋体">通用TVR算法开发，实验结果对比多数前沿算法有超过15%的性能提升，与当前大模型SOTA方法HunYuan_TVR性能相当，且部分V-T指标上具有更高的精度；</font></li>
+           <li><font size="2" face="宋体">广告业务场景TVR算法，R1结果表明潜在自动化审核处理效率预估能提高约10%，全行业测试集分类准确率87.3%；</font></li>
+           <li><font size="2" face="宋体">关联广告特征数据与用户特征数据，实现广告特征精排上线流程；完成公众号文章/广告双emb特征相关性推送上线。</font></li>
            </ul>
       </td>
     </tr>
