--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   ul li {
     margin: 0;
     padding: 0;
-    text-indent: -0.8em;  /* 0.8在换行时能留出大概的间距 */
-    padding-left: 0.8em;
+    text-indent: -0.85em;  /* 0.85在换行时能留出大概的间距 */
+    padding-left: 0.85em;
   }
   ul li:before {
     counter-increment: li; /* 每次使用计数器，其值增加1 */
@@ -104,7 +104,7 @@
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 业务大模型(金融)-预训练、SFT的完整链路</font> 
            <ul>
-           <li><font size="2" face="宋体">基于英文的llama2-70B模型拓展中文和金融能力，探索扩充词表和训练方案的最优组合；Few-shot对比：(with llama2原始模型) 英文能力+0，中文能力+7.5，金融能力+8.1；(with GPT3.5模型) 英文能力-1.7，中文能力+5.6，金融能力+11；</font></li>
+           <li><font size="2" face="宋体">基于英文的llama2-70B模型拓展中文和金融能力，探索扩充词表和训练方案的最优组合；合作方Few-shot测试对比：(with llama2原始模型)英文能力+0，中文能力+7.5，金融能力+8.1；(with GPT3.5模型)英文能力-1.7，中文能力+5.6，金融能力+11；</font></li>
            <li><font size="2" face="宋体">金融的指令微调训练，获得财报总结、行情异动分析等To B业务的可交互的定制化功能；</font></li>
            <li><font size="2" face="宋体">性能优越的预训练模型提供给保险业务大模型、通用SFT大模型研究等多个业务作为base model使用。</font></li>
            </ul>
@@ -118,7 +118,7 @@
            <ul>
            <li><font size="2" face="宋体">全面提升原有SFT模型(热、冷启动)在NLP基础任务、逻辑推理、多轮对话、领域应用等多个方面的薄弱不足项，版本发测多次领先；</font></li>
            <li><font size="2" face="宋体">提出引导式推理方案，调整ppo-ptx中主模型和奖励模型的交互策略，高效解决线上用户体验中的重点badcase问题；数学、物理计算题多次测试正确率提高约三倍，首次正确率0%->87%，强化模型的泛化推理能力得到显著提升；</font></li>
-           <li><font size="2" face="宋体">176b RM的训练和迭代，最终奖励模型的验证精度（模型对同源数据的学习能力）为76.96% ，对比竞品llama2 RM： Safety 64.3%、Helpfulness 70.6%； 测试精度（模型对异源数据的泛化能力）为70.41% ，对比构造prompt使用GPT4自动打分44.0% 。</font></li>
+           <li><font size="2" face="宋体">176b RM的训练和迭代，最终奖励模型的验证精度(模型对同源数据的学习能力)为76.96% ，对比竞品llama2 RM： Safety 64.3%、Helpfulness 70.6%； 测试精度(模型对异源数据的泛化能力)为70.41% ，对比构造prompt使用GPT4自动打分44.0% 。</font></li>
            </ul>
       </td>
     </tr>
@@ -128,7 +128,7 @@
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 业务大模型(广告)-营销话术的SFT和强化学习</font> 
            <ul>
-           <li><font size="2" face="宋体">实现基于医美、口腔、眼科、植发等重点行业信息的AIGC封闭式问答机器人；现阶段已经在消费医疗赛道-口腔打造正向案例，其中头部客户对比人工设置的问答，AI生成问答沉淀的线索有效率提升 44%（37.93%→54.55%），成本降低 21%（1110.0→918.4）；</font></li>
+           <li><font size="2" face="宋体">实现基于医美、口腔、眼科、植发等重点行业信息的AIGC封闭式问答机器人；现阶段已经在消费医疗赛道-口腔打造正向案例，其中头部客户对比人工设置的问答，AI生成问答沉淀的线索有效率提升44%(37.93%→54.55%)，成本降低21%(1110.0→918.4)；</font></li>
            <li><font size="2" face="宋体">基于客户喜好和转化需求，使用强化学习技术实现问答话术的个性化表达，兼具语言风格、交流能力、商品知识和营销导向等定制化的核心原子能力：拟人化程度高、态度亲切温和；理解商品相关行业属性知识图谱以及用户非专业表达的诉求；话术新鲜多样促进留存。</font></li>
            </ul>
       </td>
