--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
            <br>
            <font size="3" face="楷体_GB2312" style="color: #4e72b8;"> 广告特征工程-视文相关性和精排特征实验</font> 
            <ul>
-           <li><font size="2" face="宋体">通用TVR算法开发，实验结果对比多数前沿算法有超过15%的性能提升，与当前大模型SOTA方法HunYuan_TVR性能相当，且部分V-T指标上具有更高的精度；</font></li>
+           <li><font size="2" face="宋体">通用TVR算法开发，实验结果对比多数前沿算法有超过15%的性能提升，与当前大模型SOTA方法HunYuan_TVR性能相当；</font></li>
            <li><font size="2" face="宋体">广告业务场景TVR算法，R1结果表明潜在自动化审核处理效率预估能提高约10%，全行业测试集分类准确率87.3%；</font></li>
            <li><font size="2" face="宋体">关联广告特征数据与用户特征数据，实现广告特征精排上线流程；完成公众号文章/广告双emb特征相关性推送上线。</font></li>
            </ul>
