--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   
 <h2>Biography</h2>
 <p style="text-align:justify;">
-  I am currently a researcher at Data Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a> （AMSS, CAS） and  Prof. <a href="https://sites.google.com/site/yandongming/" target="_blank">Dong-Ming Yan</a> form National Laboratory of Pattern Recognition(NLPR), Institute of Automation of CAS(CASIA). Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
+  I am currently a researcher at Data Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. 
+  My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a> (AMSS, CAS) and  Prof. <a href="https://sites.google.com/site/yandongming/" target="_blank">Dong-Ming Yan</a> form <a href="https://nlpr.ia.ac.cn/cn/index.html" target="_blank">  National Laboratory of Pattern Recognition(NLPR) </a>,  <a href="http://www.ia.cas.cn/" target="_blank"> Institute of Automation of CAS(CASIA)</a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
   My current research spot is AIGC, including large models and multi-modality. My research interest also includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
@@ -387,7 +388,7 @@
            <a href="./Awards/19PMS.pdf" target="_blank"><strong> Pacemaker to Merit Student </strong></a>  of CAS <font size="3" face="楷体_GB2312"> (中科院三好学生标兵) </font> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1% ↓ </i> </font>] </td>
     </tr>
     <tr>
-      <td> 2020-2022 (4 years)  </td>   
+      <td> 2020-2022 (3 years)  </td>   
       <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> [<a href="./Awards/20MS.pdf" target="_blank">2020</a>, <a href="./Awards/21MS.pdf" target="_blank">2021</a>,<a href="./Awards/22MS.pdf" target="_blank">2022</a>]</td>
      </tr>  
       <tr>
